# Trabalho-Contraste

./: .gitignore  README.md  pyproject.toml
trabalho_contraste/: commom.py  trabalho_contraste.ipynb  trabalho_contraste.py
trabalho_contraste/dashboard/: Contraste.py  commom.py
trabalho_contraste/dashboard/pages/: 1_Etapa_1.py  2_Etapa_2.py  3_Etapa_3.py
