[tool.poetry]
name = "trabalho-contraste"
version = "0.1.0"
description = ""
authors = ["Otavio Almeida <otavioalmeida650@gmail.com>"]
readme = "README.md"
packages = [{include = "trabalho_contraste"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^9.5.0"
plotly = "^5.14.1"
numpy = "^1.24.3"
polars = "^0.17.9"
pandas = "^2.0.1"
pyarrow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
