[tool.poetry]
name = "trabalho-contraste"
version = "0.1.0"
description = ""
authors = ["Otavio Almeida <otavioalmeida650@gmail.com>"]
readme = "README.md"
packages = [{include = "trabalho_contraste"}]

[tool.poetry.dependencies]
python = "3.9.16"
pillow = "^9.5.0"
plotly = "^5.14.1"
numpy = "^1.24.3"
polars = "^0.17.9"
pyarrow = "^11.0.0"
taskipy = "^1.10.4"
streamlit = "^1.21.0"
scikit-image = "^0.20.0"
ipykernel = "^6.22.0"
chart-studio = "^1.1.0"
nbformat = "^5.8.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.263"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
dashboard = "poetry run streamlit run trabalho_contraste/dashboard/Contraste.py"
